# estudos

./: oficina-demetrio.md
API/: oficina-api-juamoasei.md
backend/: api.md
css/: oficina-css-gabs.md
curso-aprendendo-a-aprender/: curso-aprendendo-a-aprender.md
fast-api-course/: aula-00.md
fast_zero_project/: pyproject.toml
git&github/: dicas-de-terminal.md  git-colaborativo.md  introducao-git&github.md
internet/: oficina-internet.md
javascript/: array-e-objetos-oficina.md  estrutura-de-dados.md  funcoes-classicas.md  funcoes-resumo-oficina.md  funcoes.md
oficinas/: oficina-demetrio-linkedin.md  oficina-demetrio.md  oficina-will-entrevistas.md
python-course/exercicios/: bigodin.py  exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  if-elif-else.py  myage.py  objeto.py  print_input.py
python-course/explicacoes/: 1-notes.md
python-exercicios/: aula06.py  aula06a.md  aula06b.py  aula07.md  aula07a.py  aula08.md  aula08a.py  aula08a1.py  aula09.md  aula09a.py  ex001.py  ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py  ex013.py  ex014.py  ex015.py  ex016.py  ex017.py  ex018.py  ex019.py  ex020.py  ex021.py
react/curso-react-do-zero-a-maestria/: secao-1-introducao.md
solucoes-gym/: session-1.md  session-11.md  session-12.md  session-13.md  session-14.md  session-15.md  session-3.md
solucoes-gym/session-13/: session-13.md
solucoes-gym/session-16/freelancer/src/: index.html  style.css
