[tool.poetry]
name = "fast-zero-project"
version = "0.1.0"
description = ""
authors = ["amanda-holanda <amanda.holanda@jusbrasil.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
